--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,37 +1,18 @@
-name: Cucumber CI
-
+name: build
 on:
-  push:
   pull_request:
-    branches:
-      - main
 
 jobs:
   build:
-    name: 'Build'
+    name: Build and Run Tests
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Cache local Maven repository
-        uses: actions/cache@v3
+      - name: Checkout Code
+        uses: actions/checkout@v1
+      - name: Build and Run Tests
+        run: # execute your tests generating test results
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v3
+        if: always() # always run even if the previous step fails
         with:
-          path: ~/.m2/repository
-          key: build-${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            build-${{ runner.os }}-maven-
-      - uses:
-          AdoptOpenJDK/install-jdk@v1
-        with:
-          version: '1.8'
-      - name: test maven
-        run: |
-          cd maven
-          ./mvnw test -Dmaven.test.failure.ignore
-      - run: grep -q "The step 'I wait 1 hour' and 1 other step(s) are undefined." maven/target/surefire-reports/io.cucumber.skeleton.RunCucumberTest.txt || ( echo "mvn test didn't fail as expected" && false )
-      - name: test gradle
-        run: |
-          cd gradle
-          ./gradlew test || true
-      - run: grep -q "The step 'I wait 1 hour' and 1 other step(s) are undefined." gradle/build/reports/tests/test/classes/io.cucumber.skeleton.RunCucumberTest.html  || ( echo "gradle test didn't fail as expected" && false )
-      - name: compare gradle and maven sources
-        run: diff gradle/src maven/src
+          report_paths: '**/build/test-results/test/TEST-*.xml'
